--- a/src/index.html
+++ b/src/index.html
@@ -2,17 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ProdespVideoIndexer</title>
+  <title>MVP Chatbot Prodesp</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://cdn.botframework.com/botframework-webchat/latest/botchat.css" rel="stylesheet" />
-  <script src="https://cdn.botframework.com/botframework-webchat/latest/webchat.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="../../assets/js/chat.js" type="text/javascript"></script>
 </head>
 <body>
   <app-root></app-root>
 </body>
-
-
 </html>
